--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   await liff.ShareTargetPicker([
     { 
       "type": "flex",
-      "alttext": "Flex Message from ShareTargetPicker",
+      "alttext": "Flex Message",
       "content": {
 
     "type": "bubble",
@@ -105,10 +105,6 @@
 }
 main()
 </script>
-  
-  
-  
-    
 </body>
 </html>
   </body>
