1 file modified, 1 added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   </head>
   <body>
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+  <h1> สวัสดีโลก </h1>
+  
   <script>
   async function main() {await liff.init({ liffId: "1656905299-gYaGGNEq" })
   await liff.ShareTargetPicker([
